[package]
name = "maimai"
version = "0.1.0"
authors = ["adria0 <adria@codecontext.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "web"
path = "src/main_web.rs"

[[bin]]
name = "camera"
path = "src/main_camera.rs"

[dependencies]
actix-web = "3.1"
handlebars = "3.5"
serde_json = "1.0"
anyhow = "1.0"
uvc = { git = "https://github.com/adria0/libuvc-rs.git" }
clap = "2.33"
# nannou = "0.15"
once_cell =  "1.5"
sysfs_gpio = "0.5"
